# pid4cat-model

./: .copier-answers.yml  .cruft.json  .env.public  .gitignore  .linkmllint.yaml  .pre-commit-config.yaml  .yamlfix.toml  .yamllint.yaml  .zenodo.json  404.html  Agent.md  Boolean.md  CONTRIBUTING.md  ChangeLogFields.md  Container.md  Curie.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Double.md  Float.md  Integer.md  Jsonpath.md  Jsonpointer.md  LICENSE  LogRecord.md  Makefile  Ncname.md  Nodeidentifier.md  Objectidentifier.md  PID4CatAgentRoles.md  PID4CatRecord.md  PID4CatRelation.md  PID4CatStatus.md  README.md  README_pypkg.md  RelationTypes.md  ResourceCategories.md  ResourceInfo.md  (+52 more)
.github/: dependabot.yml
.github/workflows/: deploy-docs.yaml  main.yaml  pypi-publish.yaml
Agent/: index.html
Boolean/: index.html
ChangeLogField/: index.html
ChangeLogFields/: index.html
Container/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
HandleAPIRecord/: index.html
HandleData/: index.html
HandleDataType/: index.html
HandleRecord/: index.html
HandleRecordContainer/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LogRecord/: index.html
MEDIATypes/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
PID4CatAgentRole/: index.html
PID4CatAgentRoles/: index.html
PID4CatRecord/: index.html
PID4CatRelation/: index.html
PID4CatStatus/: index.html
PIDContainer/: index.html
RelationType/: index.html
RelationTypes/: index.html
RepresentationVariant/: index.html
ResourceCategories/: index.html
ResourceCategory/: index.html
ResourceInfo/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
affiliation_ror/: index.html
change_log/: index.html
changed_field/: index.html
contact_information/: index.html
contains_pids/: index.html
curation_contact/: index.html
curation_contact_email/: index.html
data/: index.html
datetime_log/: index.html
dc_rights/: index.html
description/: index.html
dev/: 404.html  index.html  sitemap.xml
dev/about/: index.html
dev/apis/: index.html
dev/elements/: index.html
dev/future-docs/: index.html
dev/getting-started/: index.html
dev/js/: extra-loader.js
dev/metadata/: index.html
dev/open-data/: index.html
dev/overview/: index.html
dev/policies/: index.html
dev/schema/: index.html  pid4cat_model.yaml
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/tools/: index.html
dev/versioning/: index.html
docs/: 2025-03-25_future-pid4cat-docs_fd9d88d.docx  about.md  apis.md  future-docs.md  getting-started.md  index.md  metadata.md  open-data.md  overview.md  policies.md  principles.md  tools.md  versioning.md
docs/schema/: README.md
elements/: index.html
elements/Agent/: index.html
elements/Boolean/: index.html
elements/ChangeLogField/: index.html
elements/Curie/: index.html
elements/Date/: index.html
elements/DateOrDatetime/: index.html
elements/Datetime/: index.html
elements/Decimal/: index.html
elements/Double/: index.html
elements/Float/: index.html
elements/HandleAPIRecord/: index.html
elements/HandleData/: index.html
elements/HandleDataType/: index.html
elements/HandleRecord/: index.html
elements/HandleRecordContainer/: index.html
elements/Integer/: index.html
elements/Jsonpath/: index.html
elements/Jsonpointer/: index.html
elements/LogRecord/: index.html
elements/MEDIATypes/: index.html
elements/Ncname/: index.html
elements/Nodeidentifier/: index.html
elements/Objectidentifier/: index.html
elements/Pid4CatAgentRole/: index.html
elements/Pid4CatRelation/: index.html
elements/Pid4CatStatus/: index.html
elements/RelationType/: index.html
elements/RepresentationVariant/: index.html
elements/ResourceCategory/: index.html
elements/ResourceInfo/: index.html
elements/Sparqlpath/: index.html
elements/String/: index.html
elements/Time/: index.html
elements/Uri/: index.html
elements/Uriorcurie/: index.html
elements/affiliation_ror/: index.html
elements/change_log/: index.html
elements/changed_field/: index.html
elements/contains_pids/: index.html
elements/curation_contact_email/: index.html
elements/data/: index.html
elements/datetime_log/: index.html
email/: index.html
encoding_format/: index.html
examples/: PID4CatRecord-001.yaml  README.md  api-v2-demo.ipynb  example_p1.json  example_p1.yaml  example_p1_dataclasses.py  example_p1_pydantic.json  example_p1_pydantic.py  hdl-net-api-demo.ipynb
format/: index.html
handle/: index.html
has_agent/: index.html
has_pids/: index.html
id/: index.html
jupyter/: README.txt  handle_api_access_demo.ipynb
label/: index.html
landing_page_url/: index.html
license/: index.html
media_type/: index.html
name/: index.html
orcid/: index.html
person_orcid/: index.html
pid4cat-model/: index.html
pid_schema_version/: index.html
principles/: index.html
project/: README.md
rdf_type/: index.html
rdf_url/: index.html
record_version/: index.html
related_identifier/: index.html
related_identifiers/: index.html
relation_type/: index.html
representation_variants/: index.html
resource_category/: index.html
resource_info/: index.html
response_code/: index.html
role/: index.html
schema_type/: index.html
schema_url/: index.html
search/: search_index.json
size/: index.html
status/: index.html
tests/: __init__.py  test_data.py  test_handle_api.py  test_iso7064.py  test_model_pydantic.py
timestamp/: index.html
ttl/: index.html
type/: index.html
url/: index.html
v0.1.0/: index.html  sitemap.xml
v0.2.0/: 404.html  sitemap.xml
v0.3.0/: 404.html  sitemap.xml
v0.4.0/: 404.html  index.html
v0.4.2/: sitemap.xml
value/: index.html
values/: index.html
versioning/: index.html
(+664 files in other folders)
