[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "pid4cat_model"
description = "LinkML model for handle-based PIDs for resources in catalysis (pid4cat)"
authors = [
  # Authors sorted by number of commits
  {name = "David Linke", email = "david.linke@catalysis.de"},
]
maintainers = [
  {name = "David Linke", email = "david.linke@catalysis.de"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
include = ["README.md", "src/pid4cat_model/schema", "project"]

# We can't use caret ^ requirement specifiers here. They are a Poetry speciality.
requires-python = ">=3.11,<4.0"  # due to linkml-runtime bug, https://github.com/linkml/linkml-runtime/pull/357

dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.8.0",
]

# Ref.: https://python-poetry.org/docs/
# Ref.: https://github.com/mtkennerly/poetry-dynamic-versioning
[tool.poetry]
requires-poetry = ">=2.0"
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = ">=1.7.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.group.dev.dependencies]
linkml = ">=1.3.5"
mike = ">=2.1.3"
mkdocs-material = ">=8.2.8"
mkdocs-mermaid2-plugin = ">=1.1.1"
jupyter = ">=1.0.0"
mknotebooks = ">= 0.8.0"

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "poetry.lock",
  "project/*",
  "src/pid4cat_model/datamodel/pid4cat_model_pydantic.py",
  "src/pid4cat_model/datamodel/pid4cat_model.py",
  "src/pid4cat_model/schema/media_types.yaml",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "poetry.lock",
  "pyproject.toml",
  "project/*",
  "src/pid4cat_model/datamodel/pid4cat_model_pydantic.py",
  "src/pid4cat_model/datamodel/pid4cat_model.py",
]
