[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "pid4cat-model"
description = "Python model equivalent of LinkML datamodel for handle-based PIDs for resources in catalysis (pid4cat)"
authors = [
  # Authors sorted by number of commits
  {name = "David Linke", email = "david.linke@catalysis.de"},
]
maintainers = [
  {name = "David Linke", email = "david.linke@catalysis.de"},
]
license = "MIT"
license-files = ["LICENSE"]
readme = "README_pypkg.md"
requires-python = ">=3.11,<4.0"
dynamic = ["version"]

dependencies = [
  "linkml-runtime >=1.9.2",
  "httpx (>=0.28.1,<0.29.0)",
  "click (>=8.1.7,<8.2.0)",  # temporary pin, see https://github.com/linkml/linkml/issues/2685
]

[dependency-groups]
dev = [
    "linkml>=1.9.2",
    "mike>=2.1.3",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "pytest>=8.3.5",
    "coverage>=7.8.0",
]

# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Setup injection of the version specifier into the schema file
# Ref.: https://hatch.pypa.io/latest/plugins/build-hook/version/#pyprojecttoml
# Backslashes in the regex pattern must be escaped for TOML.
[tool.hatch.build.hooks.version]
path = "src/pid4cat_model/schema/pid4cat_model.yaml"
pattern = """^(?:version:?\\s*\\")(?P<version>\\S*)(?:\\"\\s*# Managed by dynamic-versioning.).*$"""

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
# Specify where coverage schould look for source files.
source = [
    "src",
    # "**/site-packages", # for not using tox
    # ".tox/**/site-packages",
]

[tool.coverage.report]
# Show in report which lines are not covered
show_missing = false
# Any line of the source code that matches one of these regexes is excluded
# from being reported as missing.
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "return NotImplemented",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
# Directory where to write the HTML report files.
directory = ".htmlcov"

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/pid4cat_model/datamodel/pid4cat_model_pydantic.py",
  "src/pid4cat_model/datamodel/pid4cat_model.py",
  "src/pid4cat_model/schema/media_types.yaml",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/pid4cat_model/datamodel/pid4cat_model_pydantic.py",
  "src/pid4cat_model/datamodel/pid4cat_model.py",
]
